<resources>
    <string name="app_name">Cinnabon App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Cinnabon App</string>
    <string name="start">Start</string>
    <string name="cinnabon_number_title">Great! how many of it do you want?</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity</string>
    <string name="cinnabon">Cinnabon</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="submit">Submit</string>
    <string name="classic_roll">Classic Roll</string>
    <string name="caramel_pecanbon">Caramel PecanBon</string>
    <string name="center_of_the_roll">Center of the Roll</string>
    <string name="total">Total: %s</string>
    <string name="cinna_sweeties">CinnaSweeties</string>
    <string name="cinnabon_stix">Cinnabon Stix</string>
    <string name="cookie_bonbite">Cookie BonBite</string>
</resources>