<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.cinnabonapp.viewmodel.CinnabonViewModel" />
        <variable
            name="summaryFragment"
            type="com.example.cinnabonapp.ui.SummaryFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cinnabon_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinnabon"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/cinnabon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@{viewModel.cinnabonType}"
                tools:text="Classic Roll" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/dividerHorizontal" />

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@{viewModel.quantity.toString()}"
                tools:text="5" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/dividerHorizontal" />

            <TextView
                android:id="@+id/pickup_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_date" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:text="@{viewModel.date}"
                tools:text="Thu Aug 25" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/dividerHorizontal" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@{@string/total(viewModel.totalPrice)}"
                tools:text="Total $30.00" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="116dp"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/submit_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total"
                tools:ignore="NotSibling" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="244dp"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> summaryFragment.openGoogleMap()}"
                android:text="@string/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total"
                tools:ignore="NotSibling" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>